--- a/drawtree/drawtree.html
+++ b/drawtree/drawtree.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- saved from url=(0065)http://www.html5tricks.com/demo/html5-canvas-drag-tree/index.html -->
 <html lang="en" class=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>HTML5 Canvas可拖动的弹性大树摇摆动画DEMO演示</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="./HTML5 Canvas可拖动的弹性大树摇摆动画DEMO演示_files/style.css" type="text/css" media="screen, projection">
-<script type="text/javascript" src="./HTML5 Canvas可拖动的弹性大树摇摆动画DEMO演示_files/verlet-1.0.0.js"></script><style type="text/css"></style>
+<link rel="stylesheet" href="./style.css" type="text/css" media="screen, projection">
+<script type="text/javascript" src="./verlet-1.0.0.js"></script><style type="text/css"></style>
 <style type="text/css">.fancybox-margin{margin-right:0px;}</style></head>
 <body youdao="bind">
 <div style="text-align:center;clear:both;">
 <script src="http://www.html5tricks.com/gg_bd_ad_720x90.js" type="text/javascript"></script>
-<script src="./HTML5 Canvas可拖动的弹性大树摇摆动画DEMO演示_files/follow.js" type="text/javascript"></script>
+<script src="./follow.js" type="text/javascript"></script>
 </div>
 <canvas id="scratch" style="width: 800px; height: 500px;" width="800" height="500"></canvas>
 <script type="text/javascript">
@@ -140,7 +140,7 @@
 		
 </script>
 <div style="text-align:center;clear:both;">
-<script src="./HTML5 Canvas可拖动的弹性大树摇摆动画DEMO演示_files/gg_bd_ad_720x90-2.js" type="text/javascript"></script><div style="width:728px;margin:10px auto;">
+<script src="./gg_bd_ad_720x90-2.js" type="text/javascript"></script><div style="width:728px;margin:10px auto;">
 <script type="text/javascript">
 var cpro_id="u1990325";
 (window["cproStyleApi"] = window["cproStyleApi"] || {})[cpro_id]={at:"3",rsi0:"728",rsi1:"250",pat:"6",tn:"baiduCustNativeAD",rss1:"#FFFFFF",conBW:"1",adp:"1",ptt:"1",ptc:"%E7%8C%9C%E4%BD%A0%E6%84%9F%E5%85%B4%E8%B6%A3",ptFS:"14",ptFC:"#000000",ptBC:"#F2F2F2",titFF:"%E5%BE%AE%E8%BD%AF%E9%9B%85%E9%BB%91",titFS:"14",rss2:"#000000",titSU:"0",ptbg:"70",piw:"0",pih:"0",ptp:"0"}
@@ -148,7 +148,7 @@ var cpro_id="u1990325";
 <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
 </div>
 
-<script src="./HTML5 Canvas可拖动的弹性大树摇摆动画DEMO演示_files/follow.js" type="text/javascript"></script>
+<script src="./follow.js" type="text/javascript"></script>
 </div>
 
 </body></html>
